Prevent scrolling with overflow hidden.

--- a/webapp/styles/main.css
+++ b/webapp/styles/main.css
@@ -15,11 +15,12 @@ body {
     font-weight: 400;
     color: #FFF;
     padding: 18px;
+    background-color: #000;
+    overflow: hidden;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
-    background-color: #000;
 }
 
 canvas {
